--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <hmtl>
 <head><title> Irrelefant Industries </title>
-<body>
+<body bgcolor="#FFFFFF">
 <img src="img/irlfstamp.svg">
 </body>
 </html>
+	
